[#5] Fix spacing on small screens

--- a/src/stylesheets/components/_list-note.scss
+++ b/src/stylesheets/components/_list-note.scss
@@ -4,7 +4,7 @@
 .list-note {
   --max-line-clamp: 10;
 
-  padding-inline: var(--gap-width-2);
+  padding: var(--gap-width-2);
 
   @include media.breakpoint(lg) {
     padding: var(--gap-width-4);
